--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
   font-family: "Poppins", serif;
 }
 
 .top__BannerBack {
-  background-image: url("../../src/public/assets/banner_back.png");
+  /* background-image: url("../../src/public/assets/banner_back.png"); */
 }
 
 .journey_BannerBack {
@@ -29,6 +30,15 @@
 #CardTwo {
   flex-direction: row-reverse;
 }
+
+
+.banner_Section::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: #000000b7;
+  z-index: 2;
+  }
 
 @media only screen and (max-width: 400px) {
   #CardTwo {
@@ -93,3 +103,6 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 } */
+
+
+
