booking model, booking and contact us page message, faq dropdown fix, filters in brand, cars langiage handling blog page

--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -104,4 +104,9 @@ body.ar .ar_img{
   position: absolute;
   bottom: 10px;
   right: 10px;
+  
+}
+
+.ant-modal-footer button.ant-btn{
+  display: none;
 }
