--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,17 @@
   #CardThree {
     padding: 10px;
   }
+
+  a img.logo_brandTop{
+    width: 200px !important;
+  }
 }
+
+/* @media only screen and (max-width: 100){
+  a img.logo_brandTop{
+    width: 200px !important;
+  }
+} */
 
 .clip-triangle {
   clip-path: polygon(100% -50%, 100% 200%, 0% 100%);
