--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,8 +84,14 @@
     padding: 10px;
   }
 
-  a img.logo_brandTop{
+  a img.logo_brandTop {
     width: 200px !important;
+  }
+
+  body.ar div.text_area div.home_blog_container h4 {
+    margin-right: 20px;
+    margin-top: 50px;
+    margin-bottom: -20px;
   }
 }
 
